debug and fix bugs

--- a/services/llm-service/Dockerfile
+++ b/services/llm-service/Dockerfile
@@ -1,15 +1,27 @@
 # Use a base Python image
-FROM python:3.9-slim
+FROM --platform=linux/amd64 python:3.9-slim
+
+# Set environment variables to avoid interactive prompts during package installation
+ENV PYTHONUNBUFFERED=1
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    libopenblas-dev \
+    liblapack-dev \
+    ca-certificates \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
 
-# Install dependencies
+# Install Python dependencies
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY app.py .
+COPY src/main.py .
 
 # Set the command to run the application
-CMD ["python", "app.py"]
+CMD ["python", "main.py"]
